Bug 460756 - Converting to sieve filters should use actual folder names instead of translated ones
Summary: Converting to sieve filters should use actual folder names instead of transla...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: sieve (other bugs)
Version First Reported In: Git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-20 11:15 UTC by David Redondo
Modified: 2022-10-23 17:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Redondo 2022-10-20 11:15:41 UTC
SUMMARY
The generated rules use translated folder names for example in German 'Posteingang' instead of INBOX
STEPS TO REPRODUCE
1. Convert filter to sieve


OBSERVED RESULT
generated rule contains    
 
fileinto "Posteingang/...";

Server complains 
failed to store into mailbox 'Posteingang/...': Mailbox doesn't exist: Posteingang/...

EXPECTED RESULT
it should say 
fileinto "INBOX/...";

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Laurent Montel 2022-10-20 11:30:11 UTC
Indeed ! I will work on it.
Comment 2 Laurent Montel 2022-10-20 11:50:48 UTC
Hi,
It seems that it's the imap server which send this info.
Which type of imap server do you use ?

In kmail it's translated too ?
Comment 3 Laurent Montel 2022-10-23 17:47:35 UTC
Git commit bc0ca61528eecaa85e3ee8afe7be62e74eec0801 by Laurent Montel.
Committed on 23/10/2022 at 17:46.
Pushed by mlaurent into branch 'release/22.08'.

Fix bug 460756:  Converting to sieve filters should use actual folder names instead of translated ones

FIXED-IN: 5.21.3

M  +1    -1    src/filter/filteractions/filteractioncopy.cpp
M  +1    -1    src/filter/filteractions/filteractionmove.cpp
M  +28   -0    src/util/mailutil.cpp
M  +1    -0    src/util/mailutil.h

https://invent.kde.org/pim/mailcommon/commit/bc0ca61528eecaa85e3ee8afe7be62e74eec0801