Fix bug 460756:  Converting to sieve filters should use actual folder names instead of translated ones

FIXED-IN: 5.21.3
BUG: 460756